--- a/exercise1.html
+++ b/exercise1.html
@@ -7,6 +7,9 @@
     <title>Exercise 1</title>
 </head>
 <body>
+<h1>Exercise 1</h1>
+<p><img src="assets/images/HAMK_logo.jpg"> </p>
+
     
 </body>
 </html>
