--- a/exercise1.html
+++ b/exercise1.html
@@ -7,9 +7,19 @@
     <title>Exercise 1</title>
 </head>
 <body>
-<h1>Exercise 1</h1>
-<p><img src="assets/images/HAMK_logo.jpg"> </p>
 
-    
+<p><img src="assets/images/HAMK_logo.jpg" > <a href="https://www.hamk.fi/opiskelijan-ohjeet/aiemmin-hankitun-osaamisen-tunnustaminen-ahot/" target="_blank">Ahotointi</a></p>
+
+<h1>Arviointi</h1>
+<p>07.09.2021 10:31</p>
+
+<h2>Opintojen arviointi on osaamisperustaista Hamkissa</h2>
+    <p>Opinnot muodostuvat pääsääntöisesti moduuleista, jotka ovat toiminnallisia, työelämälähtöisiä kokonaisuuksia. Moduulien osaamisen arviointi perustuu moduulin osaamistavoitteisiin ja arviointikriteereihin. Moduulin osaamistavoitteiden taustalla on koko tutkinnon osaamistavoitteet eli tutkintoa vastaavassa työssä tarvittavat tiedot ja taidot.</p>
+    <p>Ennen syksyä 2021 aloittaneiden opetussuunnitelmien moduuleissa voi olla erikseen arvioitavia osia. Vaikka moduulissa olisikin osia, annetaan aina myös koko moduulille arvosana. Vuoden 2021 opetussuunnitelmissa moduulit ovat opintokokonaisuuksia, joille ei anneta arvosanaa, vaan moduuliin kuuluvat opintojaksot arvioidaan erikseen.
+ 
+        Opiskelijan moduulissa saavuttama osaaminen arvioidaan pääsääntöisesti numeerisella arvioinnilla (arviointiasteikko 1-5), jossa 5 tarkoittaa kiitettävää osaamista, 4 ja 3 hyvää osaamista, 2 ja 1 tyydyttävää osaamista suhteessa moduulin osaamistavoitteisiin.  HYL tarkoittaa hylättyä suoritusta. Opettaja kirjaa aina hylätystä suorituksesta hylkäämisen syyn opintorekisteriin. Näin opiskelija saa tiedon siitä, mitä kyseisen moduulin suorittamisesta puuttuu. Arvioinnin yhteydessä opiskelija saa kuitenkin arvioinnin niistä opintopisteistä, jotka hän on jo suorittanut hyväksytysti. Joissain tilanteissa moduuli arvioidaan asteikolla HYV hyväksytty – HYL hylätty, myös tällöin hylkäämisen syy kirjataan opintorekisteriin.
+        Osaamisen arviointiin sisältyy jatkuva palaute oppimisestasi. Käytännössä arviointi on siis jatkuvaa yhteistyötä ja vuorovaikutusta muiden opiskelijoiden, opettajien sekä työpaikkaohjaajien tai projektien asiakkaiden kanssa. Saat palautetta sekä kirjallisesti että suullisesti oman osaamisesi kehittymisestä. Palautteen tarkoituksena on kannustaa sinua kehittymään. Sinulla on opiskelijana keskeinen rooli itse- ja vertaisarvioinnissa.
+        
+        Osaamistasi arvioidaan siis monipuolisilla tavoilla ja erilaisissa ympäristöissä. Tarkemmat kuvaukset arvioinnista löydät jokaisen moduulin toteutussuunnitelmasta ja tarvittaessa saat lisätietoa moduulin opettajilta.</p>
 </body>
 </html>
