exercise1 checked, no errors

--- a/exercise1.html
+++ b/exercise1.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fi">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<p><img src="assets/images/HAMK_logo.jpg" > <a href="https://www.hamk.fi/opiskelijan-ohjeet/aiemmin-hankitun-osaamisen-tunnustaminen-ahot/" target="_blank">Ahotointi</a></p>
+<p><img src="assets/images/HAMK_logo.jpg" alt="Hamk logo" > <a href="https://www.hamk.fi/opiskelijan-ohjeet/aiemmin-hankitun-osaamisen-tunnustaminen-ahot/" target="_blank">Ahotointi</a></p>
 
 <h1>Arviointi</h1>
 <p>07.09.2021 10:31</p>
