--- a/page2.html
+++ b/page2.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Figure Caption - HTML5</title>
+    <link href="assets/css/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 
@@ -12,6 +13,8 @@
         <img src="assets/images/helsinki.jpg" alt="image 2;">
       <figcaption>Helsinki</figcaption>
       </figure>
+
+      <h1>This is the heading</h1>
 
       <p> <img src="assets\images\helsinki.jpg" style="float:left; margin-right: 10px"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni quae eveniet sequi, ex provident obcaecati corporis et distinctio dolore voluptatum architecto, deserunt explicabo soluta harum veritatis quo adipisci expedita excepturi officiis nulla qui voluptatibus? Libero quis at iste ex aspernatur eaque saepe, 
         minus asperiores distinctio ratione repellat excepturi incidunt iusto?Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni quae eveniet sequi, ex provident obcaecati corporis et distinctio dolore voluptatum architecto, deserunt explicabo soluta harum veritatis quo adipisci expedita excepturi officiis nulla qui voluptatibus? Libero quis at iste ex aspernatur eaque saepe, 
