exercise3 html done

--- a/exercise3.html
+++ b/exercise3.html
@@ -8,7 +8,7 @@
     <link href="assets/css/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    <div><p><img src="assets/images/HAMK_logo.jpg" alt="Hamk logo" ></p></div>
+    <p><img src="assets/images/HAMK_logo.jpg" alt="Hamk logo" ></p>
 
     <a href="page1.html">Home</a>
 
